src/components/Stickie/Stickie.css
#stickie {
  max-width: 250px;
  overflow: scroll;
}


#delete {
  padding-top: 7px;
	padding-right: 7px;
	position: absolute;
	right: 0;
	top: 0;
	display: none;
}

#stickie:hover #delete, #stickie:focus #delete {
  display: block;
  cursor: pointer;
}


#edit {
  padding-top: 7px;
	padding-left: 7px;
	position: absolute;
	left: 0;
	top: 0;
	display: none;
}

#stickie:hover #edit, #stickie:focus #edit {
  display: block;
  cursor: pointer;
}

